--- a/Index.html
+++ b/Index.html
@@ -21,13 +21,13 @@
     <section id="section1">
         <h2>Section 1</h2>
         <p>This is a paragraph for section 1.</p>
-        <img src="" alt="Placeholder Image 1">
+        <img src="D6F1E41F-38CD-43A8-A8EE-D811D82C578C_1_105_c.jpeg" alt="Placeholder Image 1">
     </section>
 
     <section id="section2">
         <h2>Section 2</h2>
         <p>This is a paragraph for section 2.</p>
-        <img src="" alt="Placeholder Image 2">
+        <img src="3F8530B4-DA82-483F-BB0F-2AC862E4B3EF_1_105_c.jpeg" alt="Placeholder Image 2">
     </section>
 
     <section id="section3">
