--- a/Index.html
+++ b/Index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Website</title>
+    <meta name="Index" content="width=device-width, initial-scale=1.0">
+    <title>My Website</title>
 </head>
 <body>
     <header>
