--- a/Index.html
+++ b/Index.html
@@ -1,43 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="Index" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name - Resume and Interests</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        h1, h2 {
+            color: #333;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
+
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>Your Name</h1>
+        <p>Web Developer</p>
     </header>
-    
-    <nav>
+
+    <section>
+        <h2>Resume</h2>
+        <p>Summary of your qualifications and experiences goes here.</p>
+
+        <h3>Education</h3>
         <ul>
-            <li><a href="#section1">Section 1</a></li>
-            <li><a href="#section2">Section 2</a></li>
-            <li><a href="#section3">Section 3</a></li>
+            <li>University Name - Degree (Year)</li>
         </ul>
-    </nav>
 
-    <section id="section1">
-        <h2>Section 1</h2>
-        <p>This is a paragraph for section 1.</p>
-        <img src="D6F1E41F-38CD-43A8-A8EE-D811D82C578C_1_105_c.jpeg" alt="Placeholder Image 1">
+        <h3>Experience</h3>
+        <ul>
+            <li>Company Name - Position (Year)</li>
+        </ul>
     </section>
 
-    <section id="section2">
-        <h2>Section 2</h2>
-        <p>This is a paragraph for section 2.</p>
-        <img src="3F8530B4-DA82-483F-BB0F-2AC862E4B3EF_1_105_c.jpeg" alt="Placeholder Image 2">
-    </section>
-
-    <section id="section3">
-        <h2>Section 3</h2>
-        <p>This is a paragraph for section 3.</p>
-        <img src="" alt="Placeholder Image 3">
+    <section>
+        <h2>Interests</h2>
+        <p>Write about your interests here.</p>
     </section>
 
     <footer>
-        <p>Contact us at email@example.com</p>
+        <p>Contact: youremail@example.com</p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/your-profile">Your Profile</a></p>
     </footer>
 </body>
+
 </html>
+
+<head>
+
+    <title>Photo Gallery</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        header {
+            background-color: #007BFF;
+            color: white;
+            padding: 10px 20px;
+            text-align: center;
+        }
+        img {
+            width: 100%;
+            max-width: 400px;
+            margin: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Welcome to My Photo Gallery</h1>
+        <p>Enjoy a selection of my favorite pictures.</p>
+    </header>
+    <div class="container">
+        <!-- Add your images here -->
+        <img src="path_to_your_image1.jpg" alt="Description of image 1">
+        <img src="path_to_your_image2.jpg" alt="Description of image 2">
+        <img src="path_to_your_image3.jpg" alt="Description of image 3">
+        <!-- You can add more images as needed -->
+    </div>
+</body>
